test/hlt/result.txt
======[pikapython packages installed]======
pikascript-core==v1.13.3 (2024/05/25 01:26:44)
PikaStdLib===v1.13.3
===========================================

~~~/ POWERED BY \~~~
~  pikapython.com  ~
~~~~~~~~~~~~~~~~~~~~
hello pikascript
>>> ======= Test Start =======
>>> >>> >>> 3
>>> ... ... 0
1
2
3
4
5
6
7
8
9
======= Test End =======
>>> 
Error: line buff overflow, please use bigger 'PIKA_LINE_BUFF_SIZE'

